[package]
name = "mousefood-esp32-demo"
version = "0.1.0"
authors = ["Jagoda Estera Ślązak <jslazak@jslazak.com>"]
edition = "2024"
rust-version = "1.85.0"

[[bin]]
name = "mousefood-esp32-demo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 3

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = 3

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
time = {version = "0.3.41"}
rand = "0.9.1"
mipidsi = "0.9.0"
mousefood = "0.2.1"
tui-big-text = "=0.7.0"

[build-dependencies]
embuild = "0.33"
